# ubisoft-next-2025

./: README.md
.github/workflows/: Math Unit Test.yml  unit_test.yml
Game/: .gitignore  Game.sln  Game.vcxproj  Game.vcxproj.filters  README.md
Game/.github/workflows/: Math Unit Test.yml
Game/Libraries/: Math.lib
Game/Main/: Camera.cpp  Camera.h  Common.h  GameScene.cpp  GameScene.h  GameplayScene.cpp  GameplayScene.h  GameplayState.cpp  GameplayState.h  GameplayStateMachine.cpp  GameplayStateMachine.h  GolfAimingState.cpp  GolfAimingState.h  GolfShootState.cpp  GolfShootState.h  HoleProgressState.cpp  HoleProgressState.h  Main.vcxproj  Main.vcxproj.filters  ObservationState.cpp  ObservationState.h  OtherPlayerState.cpp  OtherPlayerState.h  Physics.h  PhysicsResolveScene.cpp  PhysicsResolveScene.h  PhysicsScene.cpp  PhysicsScene.h  RayMarchingObject.cpp  RayMarchingObject.h  RayMarchingRenderer.cpp  RayMarchingRenderer.h  Render.cpp  Render.h  RenderScene.cpp  RenderScene.h  Resources.h  Scene.h  WinState.cpp  WinState.h  (+2 more)
Game/Math/: Math.vcxproj  Math.vcxproj.filters  Matrix.h  README.md  Vector.h  Vector3.cpp  Vector3p.cpp  Vector4p.cpp  pch.h
Game/Math/SSE/: Common.h  Matrix.h  Matrix3_4_Impl.h  Vector.h  Vector3_4_Impl.h
Game/Math/Scalar/: Matrix.h  Matrix_Impl.h  SyntacticSugar_Impl.h  Vector.h  Vector2_Impl.h  Vector3_Impl.h  Vector4_Impl.h  Vector_Impl.h
Game/Physics/: Body.cpp  Body.h  BoxGeometry.cpp  BoxGeometry.h  CollisionInfo.cpp  CollisionInfo.h  Geometry.cpp  Geometry.h  Physics.cpp  Physics.vcxproj  Physics.vcxproj.filters  PlaneGeometry.cpp  PlaneGeometry.h  Shape.h  Simplex.cpp  Simplex.h  SphereGeometry.cpp  SphereGeometry.h  SphereOnlyWorld.cpp  SphereOnlyWorld.h  Transform.cpp  Transform.h  World.cpp  World.h  pch.h
Game/Rendering/: Renderer.cpp  Renderer.h  Rendering.cpp  Rendering.h  Rendering.vcxproj  Rendering.vcxproj.filters  cpp.hint
Game/StateMachine/: State.cpp  State.h  StateMachine.cpp  StateMachine.h  StateMachine.vcxproj  StateMachine.vcxproj.filters  StateMachineGraph.cpp  StateMachineGraph.h  cpp.hint
Game/VRPSolver/: Chromosome.cpp  Chromosome.h  Solver.cpp  Solver.h  VRPSolver.cpp  VRPSolver.h  VRPSolver.vcxproj  VRPSolver.vcxproj.filters  cpp.hint  dllmain.cpp
Game/app/: CMakeLists.txt  README.md  game.cpp  makefile  run_test.cmake  run_tests.cmake  stdafx.h
Game/app/math/: CMakeLists.txt
Game/app/math/include/: Vector.h  Vector3.h  Vector3p.h  Vector4p.h  operations.h
Game/app/math/src/: Vector3.cpp  Vector3p.cpp  Vector4p.cpp
Game/app/math/test/: Vector3_unit_test.cpp  Vector3p_unit_test.cpp
Unit Test/: CMakeLists.txt  makefile  run_test.cmake
Unit Test/Math/: CMakeLists.txt  Matrix3_sse_unit_test.cpp  Matrix4_sse_unit_test.cpp  Vector3_sse_unit_test.cpp  Vector3_unit_test.cpp  Vector3p_unit_test.cpp
